[gd_scene load_steps=4 format=2]

[ext_resource path="res://art/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TimeRemainingLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.133333, 0.631373, 0.764706, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 279.0
margin_bottom = 159.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1

[node name="NutsLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -287.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Plant The Nuts
Don't Die!"
align = 1
autowrap = true

[node name="InstructionsLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 152.0
margin_top = 551.0
margin_right = 1010.0
margin_bottom = 872.0
rect_scale = Vector2( 0.566735, 0.524965 )
custom_fonts/font = SubResource( 1 )
text = "ARROW KEYS to MOVE
SHIFT to PLANT/PICKUP
SPACE to SHOOT
"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.5
margin_top = -200.0
margin_right = -20.0
margin_bottom = -100.0
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
